--- a/game-guide-for-eso/package.json
+++ b/game-guide-for-eso/package.json
@@ -37,5 +37,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:3001"
+    "proxy": "https://fortress-eso-guides.onrender.com"
 }
